# LJdata

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  HANDOFF.md  PRODUCT.md  README.md  docker-compose.yml  requirements.txt  streamlit_app.py
backend-api/: .env.example  Dockerfile  README.md  pyproject.toml
backend-api/src/dashboard_api/: config.py  db.py  import_runner.py  main.py  schemas.py
cloudflare/: README.md
cloudflare/workers/: package-lock.json  package.json  tsconfig.json  wrangler.toml
cloudflare/workers/src/: index.ts
database/migrations/: 001_init.sql  001_init_sqlite.sql
database/seeds/: 001_seed_core.sql
docs/: current-usable-workflow.md  design-polish-guide.md  excel-template-change-playbook.md  local-handoff.md  new-computer-setup.md  optional-postgres-docker.md  quickstart.md  snapshot-deploy.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  charts.tsx  components.tsx  constants.ts  demoData.ts  format.ts  heatmapUtils.ts  snapshotData.ts  styles.css  types.ts  views.tsx
import-service/: .env.example  README.md  pyproject.toml
import-service/src/import_service/: cli.py  db.py  models.py  templates.py  validation.py  workbook.py
scripts/: bootstrap-local.ps1  build-cloudflare-snapshot.ps1  check-local-env.ps1  create-snapshot-data.mjs  deploy-cloudflare-snapshot.ps1  publish-cloudflare-snapshot.ps1  setup-postgres-docker.ps1  setup-sqlite-local.ps1  start-local.ps1  start-streamlit.ps1
scripts/optional/: setup-postgres-docker.ps1
