[project]
name = "dashboard-import-service"
version = "0.1.0"
description = "Excel import and validation service for the Liaoning franchise contribution dashboard"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "openpyxl>=3.1",
  "psycopg[binary]>=3.2",
  "pydantic>=2.8",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30"
]

[project.scripts]
dashboard-import = "import_service.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

